modification in API's of createNft , createBid , buyOrder , and kycuploade
