# api.yaml
@@ -383,6 +383,8 @@
         type: boolean 
       physicalType: 
         type: string 
+      WalletAddress:
+        type: string
      
 
 
@@ -746,6 +748,8 @@
         type: string
       price: 
         type: integer
+      walletAddress:
+        type: string
 
   editBid:
     required:
